	  once when NSH starts; the .nshrc script will be executed for each session:
	  Once for serial, once for each USB connection, once for each Telnet
	  session.
	* apps/system/readline: Correct readline() return value.  Was not
	  any returning special values when end-of-file or read errors
	  occur (it would return an empty string which is not very useful).

6.26 2013-03-15 Gregory Nutt <gnutt@nuttx.org>

	* apps/builtin/exec_builtin.c:  Now uses task_spawn() to start
	  builtin applications.
	* Type of argv has changed from const char ** to char * const *
	* apps/nshlib/nsh_parse.c:  Fix memory lead: Need to detach after
	  creating a pthread.
	* apps/examples and nshlib:  Change name of _TCB to struct tcb_s to
	  match NuttX name change.
	* apps/examples/ostest/restart.c:  Add a test case to verify
	  task_restart().
	* apps/system/readline.c:  readline() now returns EOF on any failure
	  (instead of a negated errno value).  This is because the underlying
	  read is based on logic similar to getc.  The value zero was being
	  confused with a NUL.  So if a NUL was received, the NSH session
	  would terminate because it thought it was the end of file.

6.27 2013-04-28 Gregory Nutt <gnutt@nuttx.org>

	* apps/system/ramtest:  Add a simple memory test (2013-03-26).
	* apps/examples/ostest:  In the non-cancelable thread test, we need
	  to give the thread an opportunity to run and to set the non-
	  cancelable state.
	* apps/nshlib/nsh_ddcmd.c: Correct the test of the skip input
	  parameter.  Was limiting the range to <= count.  From Ken
	  Petit (2014-4-24).

6.28 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/mtdpart:  Provides a simple test of MTD partitions.
	* apps/nshlib/nsh_mntcmds.c:  Add a -h option to the df command to show
	  the volume information in human readable form (Ken Petit, 2013-4-30).
	* apps/nshlib/nsh_fscmds.c: Add support for the mksmartfs command.
	  (Ken Petit, 2013-4-30).