@@ -2,7 +2,7 @@
 # apps/system/Make.defs
 # Adds selected applications to apps/ build
 #
-#   Copyright (C) 2012 Gregory Nutt. All rights reserved.
+#   Copyright (C) 2012-2013 Gregory Nutt. All rights reserved.
 #   Author: Gregory Nutt <gnutt@nuttx.org>
 #
 # Redistribution and use in source and binary forms, with or without
@@ -46,8 +46,8 @@ ifeq ($(CONFIG_SYSTEM_INSTALL),y)
 CONFIGURED_APPS += system/install
 endif
 
-ifeq ($(CONFIG_SYSTEM_RAMTEST),y)
-CONFIGURED_APPS += system/ramtest
+ifeq ($(CONFIG_SYSTEM_FLASH_ERASEALL),y)
+CONFIGURED_APPS += system/flash_eraseall
 endif
 
 ifeq ($(CONFIG_SYSTEM_READLINE),y)
