@@ -1,0 +1,15 @@
+#
+# For a description of the syntax of this configuration file,
+# see misc/tools/kconfig-language.txt.
+#
+
+config SYSTEM_FLASH_ERASEALL
+	bool "FLASH eraseall tool"
+	default n
+	depends on MTD && NSH_BUILTIN_APPS & !NUTTX_KERNEL
+	---help---
+		Enable support for the FLASH eraseall tool.
+
+if SYSTEM_FLASH_ERASEALL
+endif
+
